alteração de blue pra green

--- a/css/kort.css
+++ b/css/kort.css
@@ -79,7 +79,7 @@ footer {
 		position: absolute;
 		top: 0;
 		left: 0;
-		border: 5px solid blue;
+		border: 5px solid green;
 		outline: 1px solid #999;
 		background: #fff;
 	}
